# android-sms-gateway-py

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: publish.yml  testing.yml
android_sms_gateway/: __init__.py  ahttp.py  client.py  constants.py  domain.py  encryption.py  enums.py  http.py
tests/: test_domain.py  test_encryption.py
